RESOLVED FIXED260625
[GStreamer] Two new failures media/media-can-play-case-sensitive-flac.html, media/media-can-play-type-case-sensitive.html
https://bugs.webkit.org/show_bug.cgi?id=260625
Summary [GStreamer] Two new failures media/media-can-play-case-sensitive-flac.html, m...
Jer Noble
Reported 2023-08-23 13:54:51 PDT
Tests added by https://github.com/WebKit/WebKit/pull/16956 are failing on GTK and WPE bots: --- /home/ews/worker/WPE-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-case-sensitive-flac-expected.txt +++ /home/ews/worker/WPE-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-case-sensitive-flac-actual.txt @@ -1,6 +1,6 @@ Tests that both flac and fLaC are reported as playable in a mp4 container. EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="flac"') == 'probably') OK EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="fLaC"') == 'probably') OK -EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="FlAc"') == '') OK +EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="FlAc"') == ''), OBSERVED 'probably' FAIL END OF TEST --- /home/ews/worker/WPE-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-type-case-sensitive-expected.txt +++ /home/ews/worker/WPE-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-type-case-sensitive-actual.txt @@ -1,9 +1,9 @@ Tests that subsequent tests of incorrectly cased codecs do not incorrectly report they are supported RUN(mediaElement.canPlayType('audio/mp4; codecs="fLaC"')) -EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="FlAc"') == '') OK +EXPECTED (mediaElement.canPlayType('audio/mp4; codecs="FlAc"') == ''), OBSERVED 'probably' FAIL RUN(mediaElement.canPlayType('video/mp4; codecs="avc1"')) -EXPECTED (mediaElement.canPlayType('video/mp4; codecs="AvC1"') == '') OK +EXPECTED (mediaElement.canPlayType('video/mp4; codecs="AvC1"') == ''), OBSERVED 'probably' FAIL RUN(mediaElement.canPlayType('video/ogg; codecs="vorbis"')) -EXPECTED (mediaElement.canPlayType('video/ogg; codecs="vOrBiS"') == '') OK +EXPECTED (mediaElement.canPlayType('video/ogg; codecs="vOrBiS"') == ''), OBSERVED 'probably' FAIL END OF TEST Looks like GTK is treating the codecs field as case-insensitive.
Attachments
Philippe Normand
Comment 1 2023-08-25 07:01:26 PDT
EWS
Comment 2 2023-08-28 01:20:41 PDT
Committed 267343@main (5ee3f9a7c6a9): <https://commits.webkit.org/267343@main> Reviewed commits have been landed. Closing PR #17067 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-08-28 01:21:15 PDT
Note You need to log in before you can comment on or make changes to this bug.