Fix HEVC codec string parsing

Codec string is first moved into lowercase and then compared in uppercase.
This is backport of 5ee3f9a7c6a9 from upstream:

Two new failures media/media-can-play-case-sensitive-flac.html, media/media-can-play-type-case-sensitive.html https://bugs.webkit.org/show_bug.cgi?id=260625

Reviewed by Xabier Rodriguez-Calvar.

Codec string matching is now case-sensitive in the registry scanner.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::initializeDecoders):
(WebCore::GStreamerRegistryScanner::isContentTypeSupported const):

Canonical link: https://commits.webkit.org/267343@main